# mobii

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Documentation/: Doxyfile
Documentation/html/: _about_activity_8java.html  _byte_arrays_8java.html  _call_8java.html  _connected_activity_8java.html  _connection_activity_8java.html  _contacts_8java.html  _del_contact_8java.html  _files_8java.html  _get_contacts_8java.html  _header_8java.html  _i_connection_8java.html  _i_protocol_8java.html  _i_protocol_action_8java.html  _i_protocol_com_8java.html  _i_settings_8java.html  _json_parser_8java.html  _md5_8java.html  _mobii_activity_8java.html  _mobii_connection_activity_8java.html  _mobii_receiver_8java.html  _mobii_service_8java.html  _mobile_infos_8java.html  _network_8java.html  _packet_8java.html  _protocol_8java.html  _server_auth_8java.html  _settings_activity_8java.html  _sms_8java.html  _ssl_connection_8java.html  _ssl_context_8java.html  _tcp_client_8java.html  _tcp_connection_8java.html  _tcp_connection_task_8java.html  _udp_connection_8java.html  _udp_connection_task_8java.html  _uid_8java.html  _upt_contact_8java.html  _utils_8java.html  _wifi_8java.html  annotated.html  (+792 more)
Documentation/latex/: _about_activity_8java.tex  _byte_arrays_8java.tex  _call_8java.tex  _connected_activity_8java.tex  _connection_activity_8java.tex  _contacts_8java.tex  _del_contact_8java.tex  _files_8java.tex  _get_contacts_8java.tex  _header_8java.tex  _i_connection_8java.tex  _i_protocol_8java.tex  _i_protocol_action_8java.tex  _i_protocol_com_8java.tex  _i_settings_8java.tex  _json_parser_8java.tex  _md5_8java.tex  _mobii_activity_8java.tex  _mobii_connection_activity_8java.tex  _mobii_receiver_8java.tex  _mobii_service_8java.tex  _mobile_infos_8java.tex  _network_8java.tex  _packet_8java.tex  _protocol_8java.tex  _server_auth_8java.tex  _settings_activity_8java.tex  _sms_8java.tex  _ssl_connection_8java.tex  _ssl_context_8java.tex  _tcp_client_8java.tex  _tcp_connection_8java.tex  _udp_connection_8java.tex  (+679 more)
ManageMyMobile_DesktopClient/: ManageMyMobile_DesktopClient.pro  ManageMyMobile_DesktopClient.sln
Mobii/: .classpath  .project  Base64.m  Connection.h  Connection.m  ConnectionDelegate.h  Mobii-Info.plist  Mobii-Prefix.pch  MobiiAppDelegate.h  MobiiAppDelegate.m  MobiiCalendarManager.h  MobiiCalendarManager.m  MobiiConnectionManager.h  MobiiConnectionManager.m  MobiiConnectionManagerDelegate.h  MobiiContactManager.h  MobiiContactManager.m  MobiiDeviceProfiler.h  MobiiDeviceProfiler.m  MobiiFileManager.h  MobiiFileManager.m  MobiiFlipsideViewController.h  MobiiFlipsideViewController.m  MobiiISO8601Converter.h  MobiiISO8601Converter.m  MobiiMainViewController.h  MobiiMainViewController.m  MobiiPacketManager.h  MobiiPacketManager.m  Packet.h  Packet.m  main.m
Mobii.xcodeproj/: project.pbxproj
src/: Server.cpp  Server.h  main.cpp
test/: CMakeLists.txt
test/tests/mock/: CommunicationManager.h  SessionManager.h  Socket.h
test/tests/network/: Connection.cpp  Connection.h
test/tests/protocol/: Packet.cpp  Packet.h  UserProtocol.cpp  UserProtocol.h
(+966 files in other folders)
